# autoreviewer

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/autoreviewer/: __init__.py  __main__.py  api.py  cli.py  jcheminf_pilot.py  utils.py  version.py
src/autoreviewer/comparison/: __main__.py  main.py  summarize.py
src/autoreviewer/comparison/sources/: __init__.py  biomed_central.py  jmlr.py  joss.py  openrv.py  utils.py
src/autoreviewer/jcheminf/: __init__.py  __main__.py  analysis.tsv  bmcbioinfo_doi_to_github.tsv  doi_to_github.tsv  jcheminf_doi_to_github.tsv  jcheminf_pilot.py  summarize.py
src/autoreviewer/jcheminf/sources/: biomed_central.py  bmcbioinfo_doi_to_github.jsonl  jcheminf_doi_to_github.jsonl  jmlr.py  joss.py  utils.py
src/autoreviewer/templates/: review.md
tests/: __init__.py  test_version.py
