##########################
# Setup.py Configuration #
##########################
[metadata]
name = autoreviewer
version = 0.0.6-dev
description = Automate scientific software review
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cthoyt/autoreviewer
download_url = https://github.com/cthoyt/autoreviewer/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/autoreviewer/issues
    Source Code = https://github.com/cthoyt/autoreviewer

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
keywords =
    snekpack
    cookiecutter

[options]
install_requires =
    more_itertools
    tqdm
    click
    more_click
    jinja2
    requests
    pystow>=0.5.4
    ratelimit
    black
    pyroma
    build
    pydantic

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.12

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
sources =
    openreview-py
    curies
    ebooklib
    beautifulsoup4
    pandas
    tabulate

[options.entry_points]
console_scripts =
    autoreview = autoreviewer.cli:main
    autoreviewer = autoreviewer.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = autoreviewer
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/autoreviewer
    .tox/*/lib/python*/site-packages/autoreviewer

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == __main__:
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301
    S403
    S404
    S603
    W503
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    autoreviewer
    tests
